# nHDeabsorb

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  README.rst  call_get_absorption.py  get_absorption.py  pyproject.toml
docs/: conf.py  features.rst  index.rst  installation.rst  modules.rst  requirements.txt  usage.rst  validation.rst
docs/_build/: call_get_absorption.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  searchindex.js  src.html  usage.html
docs/_build/.doctrees/: call_get_absorption.doctree  environment.pickle  index.doctree  modules.doctree  src.doctree  usage.doctree
docs/_build/_sources/: call_get_absorption.rst.txt  index.rst.txt  modules.rst.txt  src.rst.txt
docs/_build/doctrees/: call_get_absorption.doctree  environment.pickle  index.doctree  modules.doctree  src.doctree  usage.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  call_get_absorption.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  src.html  usage.html
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt
example_scripts/: pkg_run_arr.py  pkg_run_tbl.py
make_table/: README.md  bkg.pi  xspec_isolate_phabs.sh  xspec_isolate_tbabs.sh
src/nHDeabsorb/: get_absorption.py
src/nHDeabsorb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/nHDeabsorb/absorption_plots/: make_absorption_plots.py
src/nHDeabsorb/make_table/: README.md  arf.arf  ebin_edges.txt  ebin_edges_100eV_to_100keV.txt  grp_spectrum.pi  make_ebins_100eV_to_100keV.py  make_fine_ebins.py  make_fine_ebins_100eV_to_100keV.py  xspec_isolate_phabs.sh  xspec_isolate_tbabs.sh
src/nHDeabsorb/validation/: validation_plot.py
src/nHDeabsorb/validation/xspec_ana/00032646001/: Obs_00032646001pc.arf  Obs_00032646001pcback.pi  grp_Obs_00032646001pc.pi
src/nHDeabsorb/validation/xspec_ana/00032646010/: xspec_tbabs_powlaw_ufspec_and_eeufspec.sh
src/nHDeabsorb/validation/xspec_ana/00032646010/powlaw_tbabs/: fit.xcm
