[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nHDeabsorb"
description = "Calculate nH absorption in order to deabsorb an SED"
version = "0.2.0"
readme = "README.rst"
license = { text = "BSD-3-Clause", file = "LICENSE" }
dependencies = ["numpy>=1.21.6,<1.27.0", 
                "scipy>=1.11,<1.12"] # https://docs.scipy.org/doc/scipy-1.15.2/dev/toolchain.html
requires-python = ">=3.9,<3.13"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"nHDeabsorb" = ["absorption_tables/*.dat", "sample_data/*dat"]

[project.urls]
Repository = "https://github.com/spletts/nHDeabsorb"
